# Image2TextArt

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
ansi_ascii_art_generator/: __init__.py  characters.py  cli.py  core.py  gui.py  utils.py
electron-gui/: main.js  package-lock.json  package.json  python_bridge.py
electron-gui/src/: index.html
electron-gui/src/js/: app.js  settings.js  ui.js
electron-gui/src/styles/: controls.css  main.css  modal.css  output.css  panels.css  sidebar.css  titlebar.css
image2textart_generator/: __init__.py  _colormap.py  characters.py  cli.py  core.py  gui.py  utils.py
